# EdgeGPT

./: .gitignore  Dockerfile  README.md  README_zh.md  docs.md  example.env  example.py  main.py  parse_cookies.py  pyproject.toml  requirements.txt  setup.py  test_base.py
.github/: tagger-pr.json  tagger.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: GHCR.yml  PyPi.yml  PyPiChecking.yml  codeql.yml  issues.yml  pull-request.yml  stale.yml  tests.yml
docs/: README.md  README_es.md  README_ja.md  README_zh-cn.md  README_zh-tw.md  README_zh.md
docs/wiki/: EdgeGPT.md  Home.md  ImageGen.md
documentation/: ImageGen.md
src/: BingGPT.py  EdgeGPT.py  EdgeUtils.py  ImageGen.py
src/EdgeGPT/: EdgeGPT.py  EdgeUtils.py  chathub.py  constants.py  conversation.py  main.py  request.py  utilities.py
src/Utils/: EdgeUtils.py
src/helpers/: constants.py  conversation.py  conversation_style.py  exceptions.py  utilities.py
src/helpers/chathub/: chathub.py  request.py
templates/: chathub_request.json  chathub_request_backup.json  cookies.json
